# gmail-mcp-oauth

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_LOG.md  alembic.ini  mcp.Dockerfile  pyproject.toml  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dast.yml  security.yml
docs/: GMAIL_MCP_DR_RUNBOOK.md  GMAIL_MCP_OAUTH.md  GMAIL_MCP_TOOLS.md
migrations/: env.py
migrations/versions/: 0001_create_gmail_oauth_tokens_and_state_nonces.py  0002_make_encrypted_refresh_token_nullable.py  0003_add_oauth_pending_links.py  0004_add_attachment_uploads.py
scripts/: regenerate_lockfiles.sh
src/mcp_gmail/: __init__.py  _env_parsers.py  _key_validators.py  _settings_loader.py  attachment_routes.py  attachment_upload_store.py  auth.py  config.py  crypto.py  db.py  db_locks.py  health.py  lifespan.py  logging_filters.py  mcp_protocol.py  middleware.py  oauth_http.py  oauth_state.py  pending_link_store.py  pkce.py  server.py  state_store.py  token_manager.py  token_store.py
src/mcp_gmail/gmail_tools/: __init__.py  _schema_validator.py  attachment_download.py  attachment_extractors.py  attachment_input.py  attachment_source.py  attachment_text.py  audit_log.py  bootstrap.py  dispatch.py  drafts.py  drafts_lifecycle.py  drafts_post_send.py  errors.py  filter_templates.py  filters_read.py  filters_write.py  gmail_client.py  gmail_id.py  idempotency.py  labels_read.py  labels_write.py  message_format.py  message_text.py  message_text_parts.py  messages.py  messages_extras.py  messages_write.py  reply.py  reply_recipients.py  scope_check.py  send.py  threads.py  tool_definitions.py  tool_definitions_admin.py  tool_definitions_admin_cleanup.py  tool_definitions_bootstrap.py  (+11 more)
tests/: _attachment_fixtures.py  _schema_fixtures.py  conftest.py  test_attachment_extractors.py  test_attachment_handlers.py  test_attachment_source.py  test_attachment_upload_endpoint.py  test_attachment_upload_store.py  test_auth.py  test_auth_warm_jwks.py  test_config.py  test_config_allowlist.py  test_config_prior_keys.py  test_crypto.py  test_crypto_multifernet.py  test_db.py  test_db_locks.py  test_dockerfile_supply_chain.py  test_gmail_id_validation.py  test_gmail_id_validation_extended.py  test_gmail_tools_attachment_text.py  test_gmail_tools_audit_log.py  test_gmail_tools_batch_read.py  test_gmail_tools_bootstrap.py  test_gmail_tools_dispatch.py  test_gmail_tools_drafts.py  test_gmail_tools_drafts_post_send_actions.py  test_gmail_tools_errors.py  test_gmail_tools_filter_templates.py  test_gmail_tools_filters.py  test_gmail_tools_filters_write.py  test_gmail_tools_gmail_client.py  test_gmail_tools_idempotency.py  test_gmail_tools_idempotency_oauth_retry.py  test_gmail_tools_labels.py  test_gmail_tools_labels_write.py  test_gmail_tools_message_format.py  test_gmail_tools_message_text.py  test_gmail_tools_messages.py  test_gmail_tools_messages_write.py  (+28 more)
(+13 files in other folders)
